src/AppleFitnessWorkoutMapper/wwwroot/static/css/styles.css
/*
    Copyright (c) Martin Costello, 2021. All rights reserved.
    Licensed under the Apache 2.0 license. See the LICENSE file in the project root for full license information.
*/

body {
  font-size: .875rem;
}

.sidebar {
  padding: 48px 0 0;
  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
}

.sidebar-sticky {
  position: relative;
  top: 0;
  height: calc(100vh - 48px);
  padding-top: .5rem;
  overflow-x: hidden;
  overflow-y: auto;
}

@supports ((position: -webkit-sticky) or (position: sticky)) {
  .sidebar-sticky {
    position: -webkit-sticky;
    position: sticky;
    top: 48px;
  }
}

.sidebar .nav-link {
  color: #333;
  font-weight: 500;
  padding: 0.5rem 0.5rem;
}

.sidebar .nav-link.active {
  color: #007bff;
}

.list-group-item {
  padding: .75rem .75rem;
}

.list-group-item+.list-group-item:nth-of-type(2) {
  border-top-width: 1px;
}

ul.track-item-metadata {
  padding-left: 0.5rem;
}

.track-item-visibility {
  min-width: 35%;
}

[role="main"] {
  padding-top: 60px;
}

#map {
  height: 75vh;
  max-height: none;
  min-height: 75%;
}

.loader {
  animation: spin 2s linear infinite;
  border: 6px solid #f3f3f3;
  border-radius: 50%;
  border-top: 6px solid #2c3e50;
  height: 40px;
  width: 40px;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.progress {
  height: 2rem;
}

.progress .progress-bar.active {
  animation: progress-bar-stripes .5s linear infinite;
  width: 100%;
}

.ellipsis:after {
  animation: ellipsis 1.5s linear infinite;
  content: '...';
  display: inline-block;
  font-weight: 300;
  text-align: left;
  width: 20px;
}

@keyframes ellipsis {
  0% {
    content: '...';
  }

  25% {
    content: '\a0'; /* Non-breaking space */
  }

  50% {
    content: '.';
  }

  75% {
    content: '..';
  }
}

